--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-toastify": "^11.0.5",
     "sharp": "^0.34.2",
     "use-debounce": "^10.0.4"
   },
