--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-tiny-popover": "^8.1.6",
     "react-toastify": "^11.0.5",
     "sharp": "^0.34.2",
     "use-debounce": "^10.0.4"
