--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:prod": "node server.js"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@next/third-parties": "^15.3.4",
     "email-validator": "^2.0.4",
     "next": "15.3.2",
