--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@next/third-parties": "^15.3.4",
+    "clsx": "^2.1.1",
     "email-validator": "^2.0.4",
     "next": "15.3.2",
     "next-sitemap": "^4.2.3",
@@ -23,6 +24,7 @@
     "react-tiny-popover": "^8.1.6",
     "react-toastify": "^11.0.5",
     "sharp": "^0.34.2",
+    "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
