--- a/package.json
+++ b/package.json
@@ -12,20 +12,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
-    "@next/third-parties": "^15.3.4",
+    "@next/third-parties": "^16.0.0",
     "clsx": "^2.1.1",
     "email-validator": "^2.0.4",
-    "next": "15.3.2",
+    "next": "^16.0.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.4",
-    "react-tiny-popover": "^8.1.6",
-    "react-toastify": "^11.0.5",
-    "sharp": "^0.34.2",
-    "tailwind-merge": "^3.3.1",
-    "use-debounce": "^10.0.4"
+    "react-hook-form": "^7.65.0",
+    "sharp": "^0.34.4",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
