--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.65.0",
     "sharp": "^0.34.4",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
